# region_segmentation_test

./: .gitignore  CMakeLists.txt  Makefile  README.md  comparison.txt  runGrabCut.sh  runTest.sh
grabcut/: CMakeLists.txt  Makefile  grabcut  main.cpp
include/: segment.h
multi_pic/: CMakeLists.txt  Makefile  convert.py  multi_pic
multi_pic/bk_maxflow/: graph.h
multi_pic/edison_gpu/: Makefile
multi_pic/include/: colors.h  cut.h  grabcut.h  magic_wand.h  mask.h  segment.h  shift.h
multi_pic/src/: cut.cpp  grabcut.cpp  hist.cpp  magic_wand.cpp  main.cpp  shift.cpp  test_wand.cpp  utils.cpp
src/: main.cpp  utils.cpp
test/: CMakeLists.txt  Makefile
test/include/: segment.h
test/src/: main.cpp  utils.cpp
